# aws-auto-block-attackers

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto_block_attackers.py  pyproject.toml  slack_client.py  storage_backends.py
.github/workflows/: ci.yml
docs/: CLI_GUIDE.md  TECHNICAL_DESIGN.md
examples/: .env.example  config.example.yaml  cron-example.txt  systemd-example.service  systemd-timer-example.timer  whitelist.example.txt
scripts/: README.md  update_aws_ip_ranges.sh
tests/: test_auto_block_attackers.py  test_final_validation.py  test_integration.py  test_ipinfo_integration.py  test_notification_logic.py  test_observability_features.py  test_slack_client.py  test_storage_backends.py  test_tiered_blocking.py  test_timestamp_fix.py
